--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/cli": "1.5.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/googlemaps": "^3.30.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
